<resources>
    <string name="app_name">Bill Please</string>
    <string name="TVBill">Enter total bill:</string>
    <string name="ETbill" />
    <string name="PAX">Enter pax:</string>
    <string name="GST">Include GST?</string>
    <string name="servicecharge">Include service charge?</string>
    <string name="calculate">CALCULATE</string>
    <string name="reset">RESET</string>
    <string name="BILLAMOUNT" />
    <string name="PAYABLE" />
    <string name="TOTAL" />
    <string name="PAY" />
</resources>
